--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   overflow: hidden;
+  font-family: "Kode Mono", monospace;
 }
 
 .notes-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   position: relative;
   height: 100vh;
   width: 100%;
+}
+
+.note{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.text{
+  text-align: center;
+  margin: 0 auto;
+}
+
+.note:hover{
+  transform: rotate(5deg);
+}
+
+.note-h1{
+  text-align: center;
 }
